syntax = "proto3";
option go_package = "./;proto";

service StringService {
  rpc Concat(StringRequest) returns (StringResponse);
  rpc Diff(StringRequest) returns (StringResponse);
}

message StringRequest {
  string A = 1;
  string B = 2;
}

message StringResponse {
  string result = 1;
  string err = 2;
}